# Z3R0-SOL

./: .gitignore  README.md  plan_0.md
z-sol/: Anchor.toml  Cargo.toml
z-sol/programs/z-sol/: Cargo.toml
z-sol/programs/z-sol/src/: lib.rs
z-sol/tests/: Cargo.toml
z-sol/tests/src/: lib.rs  test_initialize.rs
